# kyoushi-generator

./: .gitlab-ci.yml  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: cd.yml  ci.yml  docs.yml
cli/: index.html
contributing/: index.html
docs/: cli.md
docs/reference/: config.md  generators.md  plugin.md  random.md  template.md  utils.md
license/: index.html
reference/config/: index.html
reference/generators/: index.html
reference/plugin/: index.html
reference/random/: index.html
reference/template/: index.html
reference/utils/: index.html
search/: search_index.json
src/cr_kyoushi/generator/: __init__.py  __main__.py  cli.py  config.py  core.py  plugin.py  random.py  template.py  utils.py
