[tool.poetry]
name = "cr-kyoushi-generator"
version = "0.0.1"
description = ""
authors = ["Maximilian Frank <maximilian.frank@ait.ac.at>"]
license = "GPL-3.0"
readme = 'README.md'  # Markdown files are supported
repository = "https://github.com/ait-aecid/kyoushi-generator"
homepage = "https://github.com/ait-aecid/kyoushi-generator"
packages = [
  { include = "cr_kyoushi", from = "src" }
]

[tool.poetry.plugins."cr_kyoushi.generator"]
"random" = "cr_kyoushi.generator.core:RandomGenerator"
"faker" = "cr_kyoushi.generator.core:FakerGenerator"
"numpy" = "cr_kyoushi.generator.core:NumpyGenerator"


[tool.poetry.dependencies]
python = "^3.8"
pydantic = "1.8.2"
"ruamel.yaml" = "^0.17.2"
Jinja2 = "^3.0.3"
click = "^8.0.3"
certifi = "^2021.10.08"
livereload = "^2.6.3"
Faker = "^12.3.3"
numpy = "^1.22.2"
GitPython = "^3.1.26"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^3.9.2"
pre-commit = "^2.17.0"
black = "^22.1.0"
mypy = "^0.910"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.5.1"
isort = "^5.7.0"
pylint = "^2.6.0"
safety = "^1.10.3"
autoflake = "^1.4"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.7"
mkdocs-exclude = "^1.0.2"
mkdocstrings = "^0.13.6"
mkdocs-click = "^0.4.0"
markdown-include = "^0.6.0"
pymdown-extensions = "^8.0.1"
mkdocs-macros-plugin = "^0.5.0"

[tool.isort]
profile = "black"
force_single_line = false
force_grid_wrap = 2
multi_line_output = 3
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "cr_kyoushi"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.poetry.scripts]
cr-kyoushi-generator = "cr_kyoushi.generator.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
